@startuml Scrabble

class main {
    main(): int
}

main *-- Juego

class Juego {
  - jugadores: List<Jugador>
  - tablero: Tablero
  - palabrasDisponibles: List<String>
  - historialPalabras: Stack<String>
  - turnoActual: Jugador
  + iniciarJuego(): void
  + calcularPuntaje(): void
  + ordenarJugadoresPorPuntaje(): void
  + mostrarReporte(): void
}

class Jugador {
  - nombre: String
  - fichas: LinkedList<Ficha>
  - puntaje: int
  + agregarFicha(ficha: Ficha): void
  + ordenarFichasPorPuntaje(): void
  + jugarPalabra(palabra: String): void
}

class Ficha {
  - letra: char
  - valor: int
  + obtenerValor(): int
}

class Tablero {
  - casillas: List<List<Casilla>>
  + generarTablero(): void
  + colocarFicha(ficha: Ficha, x: int, y: int): void
}

class Casilla {
  - letra: char
  - puedeColocar: bool
  + estaOcupada(): bool
}

class ColaTurnos {
  - jugadores: Queue<Jugador>
  + rotarTurnos(): void
  + siguienteTurno(): Jugador
}

class Pila {
  - palabras: Stack<String>
  + apilarPalabra(palabra: String): void
  + deshacerUltimoMovimiento(): void
}

class CargaDatos {
  - path: string
  - linea: string
  - delimitador: char
  - fila: vector<string>
  + getFila(): vector<string>
  + leerCsv(): void
  + ordenarPalabras(): void
  + obtenerTotalLetras(): void
  + mostrarPalabras(): void
  + verificarExtension(archivo: string): bool
}

Juego "1" *-- "2..*" Jugador : tiene
Juego "1" *-- "1" Tablero : tiene
Jugador "1" *-- "1..*" Ficha : tiene
Jugador "1" *-- "1" ColaTurnos : usa
Tablero "1" *-- "15..*" Casilla : contiene
Juego "1" *-- "1" Pila : usa
Jugador "1" *-- "1" Pila : usa
Juego "1" *-- "1" CargaDatos : usa

@enduml